# linal

./: CMakeLists.txt
examples/: CMakeLists.txt  VectorTesting.cpp
src/: linal.h
src/mixins/: OperationMixin.h  StdoutMixin.h
src/vectors/: Vec.h
